--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,13 @@ repositories {
 ext.webjarsFontawesomeVersion = "4.7.0"
 ext.webjarsBootstrapVersion = "5.3.3"
 ext.webjarsMarkedVersion = "14.1.2"
-ext.springAiVersion = "1.0.0-M2"
+ext.langchain4jVersion = "0.35.0"
 
 dependencies {
+  implementation 'dev.langchain4j:langchain4j-spring-boot-starter:${langchain4jVersion}'
+  implementation 'dev.langchain4j:langchain4j-open-ai-spring-boot-starter:${langchain4jVersion}'
+//  implementation 'dev.langchain4j:langchain4j-azure-open-ai-spring-boot-starter:${langchain4jVersion}'
+  implementation 'dev.langchain4j:langchain4j-embeddings-all-minilm-l6-v2:${langchain4jVersion}'
   implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
   implementation 'org.springframework.boot:spring-boot-starter-cache'
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
