--- a/pom.xml
+++ b/pom.xml
@@ -35,16 +35,11 @@
     <maven-checkstyle.version>3.3.1</maven-checkstyle.version>
     <nohttp-checkstyle.version>0.0.11</nohttp-checkstyle.version>
     <spring-format.version>0.0.41</spring-format.version>
-	  <spring-ai.version>1.0.0-M3</spring-ai.version>
+    <langchain4j.version>0.35.0</langchain4j.version>
   </properties>
 
   <dependencies>
     <!-- Spring and Spring Boot dependencies -->
-	<dependency>
-		<groupId>org.springframework.ai</groupId>
-<!--		<artifactId>spring-ai-azure-openai-spring-boot-starter</artifactId>-->
-		<artifactId>spring-ai-openai-spring-boot-starter</artifactId>
-	</dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
@@ -73,6 +68,24 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
+    </dependency>
+
+    <!-- Langchain4j -->
+    <dependency>
+      <groupId>dev.langchain4j</groupId>
+      <artifactId>langchain4j-spring-boot-starter</artifactId>
+      <version>${langchain4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>dev.langchain4j</groupId>
+      <artifactId>langchain4j-open-ai-spring-boot-starter</artifactId>
+<!--      <artifactId>langchain4j-azure-open-ai-spring-boot-starter</artifactId>-->
+      <version>${langchain4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>dev.langchain4j</groupId>
+      <artifactId>langchain4j-embeddings-all-minilm-l6-v2</artifactId>
+      <version>${langchain4j.version}</version>
     </dependency>
 
     <!-- Databases - Uses H2 by default -->
@@ -151,18 +164,6 @@
     </dependency>
 
   </dependencies>
-
-  <dependencyManagement>
-  	<dependencies>
-		<dependency>
-			<groupId>org.springframework.ai</groupId>
-			<artifactId>spring-ai-bom</artifactId>
-			<version>${spring-ai.version}</version>
-			<type>pom</type>
-			<scope>import</scope>
-		</dependency>
-	</dependencies>
-  </dependencyManagement>
 
   <build>
     <plugins>
