--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,8 @@ spring.messages.basename=messages/messages
 management.endpoints.web.exposure.include=*
 
 # Logging
-logging.level.org.springframework=INFO
-logging.level.org.springframework.ai.chat.client.advisor=DEBUG
-logging.level.com.azure=DEBUG
+logging.level.dev.langchain4j=DEBUG
+logging.level.dev.ai4j.openai4j=DEBUG
 # logging.level.org.springframework.web=DEBUG
 # logging.level.org.springframework.context.annotation=TRACE
 
@@ -28,16 +27,17 @@ logging.level.com.azure=DEBUG
 spring.web.resources.cache.cachecontrol.max-age=12h
 
 # Azure OpenAI
-# These parameters only apply when using the spring-ai-azure-openai-spring-boot-starter dependency
-spring.ai.azure.openai.chat.options.temperature=0.7
-spring.ai.azure.openai.chat.options.deployment-name=gpt-4o
-spring.ai.azure.openai.api-key=${AZURE_OPENAI_KEY}
-spring.ai.azure.openai.endpoint=${AZURE_OPENAI_ENDPOINT}
+# These parameters only apply when using the langchain4j-azure-open-ai-spring-boot-starter dependency
+langchain4j.azure-open-ai.chat-model.api-key=${AZURE_OPENAI_KEY}
+langchain4j.azure-open-ai.chat-model.endpoint=${AZURE_OPENAI_ENDPOINT}
+langchain4j.azure-open-ai.chat-model.deployment-name=gpt-4o
+langchain4j.azure-open-ai.chat-model.log-requests-and-responses=true
 
 # OpenAI
-# These parameters only apply when using the spring-ai-openai-spring-boot-starter dependency
-spring.ai.openai.chat.options.temperature=0.7
-spring.ai.openai.chat.options.deployment-name=gpt-4o
-spring.ai.openai.api-key=${OPENAI_API_KEY}
+# These parameters only apply when using the langchain4j-open-ai-spring-boot-starter dependency
+langchain4j.open-ai.chat-model.api-key=${OPENAI_API_KEY}
+langchain4j.open-ai.chat-model.model-name=gpt-4o
+langchain4j.open-ai.chat-model.log-requests=true
+langchain4j.open-ai.chat-model.log-responses=true
 
 
