Response Streaming and SSE #2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,16 +28,16 @@ spring.web.resources.cache.cachecontrol.max-age=12h
 
 # Azure OpenAI
 # These parameters only apply when using the langchain4j-azure-open-ai-spring-boot-starter dependency
-langchain4j.azure-open-ai.chat-model.api-key=${AZURE_OPENAI_KEY}
-langchain4j.azure-open-ai.chat-model.endpoint=${AZURE_OPENAI_ENDPOINT}
-langchain4j.azure-open-ai.chat-model.deployment-name=gpt-4o
-langchain4j.azure-open-ai.chat-model.log-requests-and-responses=true
+langchain4j.azure-open-ai.streaming-chat-model.api-key=${AZURE_OPENAI_KEY}
+langchain4j.azure-open-ai.streaming-chat-model.endpoint=${AZURE_OPENAI_ENDPOINT}
+langchain4j.azure-open-ai.streaming-chat-model.deployment-name=gpt-4o
+langchain4j.azure-open-ai.streaming-chat-model.log-requests-and-responses=true
 
 # OpenAI
 # These parameters only apply when using the langchain4j-open-ai-spring-boot-starter dependency
-langchain4j.open-ai.chat-model.api-key=${OPENAI_API_KEY}
-langchain4j.open-ai.chat-model.model-name=gpt-4o
-langchain4j.open-ai.chat-model.log-requests=true
-langchain4j.open-ai.chat-model.log-responses=true
+langchain4j.open-ai.streaming-chat-model.api-key=${OPENAI_API_KEY}
+langchain4j.open-ai.streaming-chat-model.model-name=gpt-4o
+langchain4j.open-ai.streaming-chat-model.log-requests=true
+langchain4j.open-ai.streaming-chat-model.log-responses=true
 
 
