--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ management.endpoints.web.exposure.include=*
 # Logging
 logging.level.dev.langchain4j=DEBUG
 logging.level.dev.ai4j.openai4j=DEBUG
+logging.level.org.springframework.samples.petclinic=DEBUG
 # logging.level.org.springframework.web=DEBUG
 # logging.level.org.springframework.context.annotation=TRACE
 
