--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,11 @@
       <artifactId>mysql</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>jakarta.xml.bind</groupId>
