--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   </parent>
 
   <groupId>org.springframework.samples</groupId>
-  <artifactId>spring-petclinic</artifactId>
+  <artifactId>spring-petclinic-langchain4j</artifactId>
   <version>3.4.0-SNAPSHOT</version>
 
   <name>petclinic</name>
