--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,14 @@ langchain4j.open-ai.chat-model.model-name=gpt-4o-mini
 langchain4j.open-ai.chat-model.log-requests=true
 langchain4j.open-ai.chat-model.log-responses=true
 
+# Ollama
+# These parameters only apply when using the langchain4j-ollama-spring-boot-starter dependency
+langchain4j.ollama.streaming-chat-model.base-url=http://localhost:11434
+langchain4j.ollama.streaming-chat-model.model-name=llama3.1
+
+langchain4j.ollama.streaming-chat-model.log-requests=true
+langchain4j.ollama.streaming-chat-model.log-responses=true
+langchain4j.ollama.chat-model.base-url=http://localhost:11434
+langchain4j.ollama.chat-model.model-name=llama3.1
+langchain4j.ollama.chat-model.log-requests=true
+langchain4j.ollama.chat-model.log-responses=true
