--- a/pom.xml
+++ b/pom.xml
@@ -79,12 +79,13 @@
       <artifactId>langchain4j-spring-boot-starter</artifactId>
       <version>${langchain4j.version}</version>
     </dependency>
-    <dependency>
-      <groupId>dev.langchain4j</groupId>
-      <artifactId>langchain4j-open-ai-spring-boot-starter</artifactId>
-<!--      <artifactId>langchain4j-azure-open-ai-spring-boot-starter</artifactId>-->
-      <version>${langchain4j.version}</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>dev.langchain4j</groupId>-->
+<!--      <artifactId>langchain4j-ollama-spring-boot-starter</artifactId>-->
+<!--      &lt;!&ndash;artifactId>langchain4j-open-ai-spring-boot-starter</artifactId&ndash;&gt;-->
+<!--&lt;!&ndash;      <artifactId>langchain4j-azure-open-ai-spring-boot-starter</artifactId>&ndash;&gt;-->
+<!--      <version>${langchain4j.version}</version>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>dev.langchain4j</groupId>
       <artifactId>langchain4j-embeddings-all-minilm-l6-v2</artifactId>
@@ -480,6 +481,41 @@
           </plugins>
         </pluginManagement>
       </build>
+    </profile>
+
+    <!-- Maven profile for various LangChain4j model integrations -->
+    <profile>
+      <id>openai</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>dev.langchain4j</groupId>
+          <artifactId>langchain4j-open-ai-spring-boot-starter</artifactId>
+          <version>${langchain4j.version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>azure-openai</id>
+      <dependencies>
+        <dependency>
+          <groupId>dev.langchain4j</groupId>
+          <artifactId>langchain4j-azure-open-ai-spring-boot-starter</artifactId>
+          <version>${langchain4j.version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>ollama</id>
+      <dependencies>
+        <dependency>
+          <groupId>dev.langchain4j</groupId>
+          <artifactId>langchain4j-ollama-spring-boot-starter</artifactId>
+          <version>${langchain4j.version}</version>
+        </dependency>
+      </dependencies>
     </profile>
   </profiles>
 </project>
