--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ ext.webjarsLocatorLiteVersion = "1.0.1"
 ext.webjarsFontawesomeVersion = "4.7.0"
 ext.webjarsBootstrapVersion = "5.3.3"
 ext.webjarsMarkedVersion = "14.1.2"
-ext.langchain4jVersion = "0.36.2"
+ext.langchain4jVersion = "1.0.0-beta3"
 
 dependencies {
   implementation "dev.langchain4j:langchain4j-spring-boot-starter:${langchain4jVersion}"
